[package]
name = "ssd1322"
description = "SPI driver for the SSD1322 OLED display controller"
version = "0.3.0"
authors = ["Kyle Schaffrick <kyle@raidi.us>"]
edition = "2021"
keywords = ["no-std", "ssd1322", "oled", "embedded", "embedded-hal-driver"]
repository = "https://github.com/edarc/ssd1322"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
	"ferris-on-nhd.jpg",
]

[dependencies]
embedded-hal = "0.2"
nb = "0.1"
embedded-graphics = { version = "0.8.1", optional = true }

[dependencies.itertools]
version = "0.7"
default-features = false

[features]
default = []
std = []
graphics = ["embedded-graphics"]
nh123864wdw3 = []
